attempt to fix card remaining on hovered state on mobile

--- a/src/components/Reveal.css
+++ b/src/components/Reveal.css
@@ -18,13 +18,13 @@
     width: 96px;
 }
 
-.reveal-image:hover {
-    z-index: 100;
+.reveal-image {
+    z-index: 0;
 }
 
 @media (hover: hover) {
     .reveal-image:hover {
-        z-index: 0;
+        z-index: 100;
     }
 }
 
